--- a/packages/solid-ui/solid-ui-blocks/src/FeaturesWithPhoto/Block03/style.css
+++ b/packages/solid-ui/solid-ui-blocks/src/FeaturesWithPhoto/Block03/style.css
@@ -1,10 +1,3 @@
-.css-1m6sebd>.css-1nvnray-ContentImages>.gatsby-image-wrapper {
-    position: absolute;
-    left: 0;
-    right: 0;
-    width: 100%;
-    border-radius: 0;
-}
 .cta-block:before {
     content: "";
     position: absolute;
@@ -12,7 +5,7 @@
     right: 0;
     top: 0;
     bottom: 0;
-    background: #33a189;
+    background: #2a9e85;
     display: block;
     z-index: 3;
     opacity: 0.75;
@@ -20,4 +13,7 @@
 .css-4ur16g{
     background-color: rgb(45, 55, 72);
     padding: 15px 0px 15px 0px;
+}
+#feature-two .cta-block .gatsby-image-wrapper {
+    display: block !important;
 }
